# rust-blogpost-auto-async

./: .env  Cargo.toml
migrations/2021-11-04-235920_users/: up.sql
src/: errors.rs  handlers.rs  main.rs  models.rs
