[package]
name = "rust-blogpost-auto-async"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", feautres = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = "1.0.130"
